# generals-android

./: .gitignore  AGENTS.md  CMakePresets.json  README.md  flake.nix  vcpkg.json
Core/GameEngine/Source/Common/INI/: INI.cpp
Core/GameEngine/Source/GameClient/: GameText.cpp
Core/Libraries/Source/WWVegas/WW3D2/: CMakeLists.txt  dx8caps.cpp  dx8renderer.cpp  dx8wrapper.cpp  formconv.cpp  render2dsentence.cpp  render2dsentence.h  surfaceclass.cpp  texture.cpp  textureloader.cpp  ww3dformat.cpp  ww3dformat.h
Core/Libraries/Source/WWVegas/WWDownload/: FTP.cpp
Generals/Code/Libraries/Source/WWVegas/WW3D2/: ddsfile.cpp
GeneralsMD/Code/CompatLib/: CMakeLists.txt
GeneralsMD/Code/CompatLib/Source/: thread_compat.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/: GameClient.cpp
GeneralsMD/Code/GameEngineDevice/Source/: SDL3GameEngine.cpp
GeneralsMD/Code/GameEngineDevice/Source/W3DDevice/GameClient/: W3DAssetManager.cpp  W3DDisplay.cpp
GeneralsMD/Code/Libraries/Source/WWVegas/WW3D2/: ddsfile.cpp
GeneralsMD/Code/Main/: CMakeLists.txt  SDL3Main.cpp
Patches/: dxvk-android.patch  gamespy-android.patch
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/generalsx/android/: MainActivity.java
android/app/src/main/java/org/libsdl/app/: SDLSurface.java
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/config/: Options.ini  dxvk.conf
cmake/: dx8.cmake  gamespy.cmake  meson-arm64-android-cross.ini.in  openal.cmake  sdl3.cmake
cmake/triplets/: arm64-android.cmake
docs/port/: ANDROID_PORT_PLAN.md
